هنا عندما اقوم بفتح التطبيق في البيئه يفتح بشكل طبيعي لكن عندما اقوم بفت

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,23 +1,21 @@
 {
-    "name": "Habitual",
-    "short_name": "Habitual",
-    "description": "An app to help you break bad habits",
-    "start_url": "/",
-    "display": "standalone",
-    "background_color": "#000000",
-    "theme_color": "#145a32",
-    "icons": [
-        {
-            "src": "/icon-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "any maskable"
-        },
-        {
-            "src": "/icon-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png",
-            "purpose": "any maskable"
-        }
-    ]
+  "name": "Habit Hacker",
+  "short_name": "Habit Hacker",
+  "description": "An app to help you track and break bad habits.",
+  "start_url": ".",
+  "display": "standalone",
+  "background_color": "#000000",
+  "theme_color": "#18453B",
+  "icons": [
+    {
+      "src": "icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
