اوكي لكن هل الايقونات التي اضفتها سيقبلها بي دبليو اي بولدر ام علي استبد

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,10 @@
 {
   "name": "Habit Hacker",
-  "short_name": "Habit Hacker",
+  "short_name": "Adatna",
   "description": "An app to help you track and break bad habits.",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#000000",
+  "background_color": "#ffffff",
   "theme_color": "#18453B",
   "icons": [
     {
