--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
   "name": "Habit Hacker",
-  "short_name": "Adatna",
-  "description": "An app to help you track and break bad habits.",
+  "short_name": "Habit Hacker",
+  "description": "تطبيق لمساعدتك على التخلص من العادات السيئة",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#18453B",
   "theme_color": "#18453B",
   "icons": [
     {
-      "src": "icon-192x192.png",
+      "src": "https://picsum.photos/seed/1/192/192",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512x512.png",
+      "src": "https://picsum.photos/seed/2/512/512",
       "sizes": "512x512",
       "type": "image/png"
     }
