--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
   "name": "Habit Hacker",
-  "short_name": "HabitHacker",
-  "description": "An app to help you quit bad habits",
+  "short_name": "Habit Hacker",
+  "description": "An app to help you track and break bad habits.",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#F0F4F8",
+  "background_color": "#ffffff",
   "theme_color": "#18453B",
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "/adatna/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/adatna/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
