--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,18 +4,44 @@
   "description": "An app to help you track and break bad habits.",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#F5F3EF",
   "theme_color": "#18453B",
+  "orientation": "portrait-primary",
   "icons": [
     {
       "src": "/adatna/icons/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/adatna/icons/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "https://picsum.photos/seed/screenshot1/1080/1920",
+      "sizes": "1080x1920",
+      "type": "image/jpeg",
+      "form_factor": "narrow"
+    },
+    {
+      "src": "https://picsum.photos/seed/screenshot2/1080/1920",
+      "sizes": "1080x1920",
+      "type": "image/jpeg",
+      "form_factor": "narrow"
+    }
+  ],
+  "shortcuts": [
+    {
+      "name": "Add New Habit",
+      "short_name": "Add Habit",
+      "description": "Quickly add a new habit to track",
+      "url": "/?action=add-habit",
+      "icons": [{ "src": "/adatna/icons/icon-192x192.png", "sizes": "192x192" }]
     }
   ]
 }
