--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,12 +1,7 @@
 {
-  "name": "Habit Hacker",
-  "short_name": "Habit Hacker",
-  "description": "An app to help you track and break bad habits.",
-  "start_url": ".",
-  "display": "standalone",
-  "background_color": "#F5F3EF",
-  "theme_color": "#18453B",
-  "orientation": "portrait-primary",
+  "name": "هاكر العادات",
+  "short_name": "عادات",
+  "description": "تطبيق لمساعدتك على التخلص من العادات السيئة وبناء عادات إيجابية",
   "icons": [
     {
       "src": "/adatna/icons/icon-192x192.png",
@@ -21,27 +16,10 @@
       "purpose": "any maskable"
     }
   ],
-  "screenshots": [
-    {
-      "src": "https://picsum.photos/seed/screenshot1/1080/1920",
-      "sizes": "1080x1920",
-      "type": "image/jpeg",
-      "form_factor": "narrow"
-    },
-    {
-      "src": "https://picsum.photos/seed/screenshot2/1080/1920",
-      "sizes": "1080x1920",
-      "type": "image/jpeg",
-      "form_factor": "narrow"
-    }
-  ],
-  "shortcuts": [
-    {
-      "name": "Add New Habit",
-      "short_name": "Add Habit",
-      "description": "Quickly add a new habit to track",
-      "url": "/?action=add-habit",
-      "icons": [{ "src": "/adatna/icons/icon-192x192.png", "sizes": "192x192" }]
-    }
-  ]
+  "theme_color": "#18453B",
+  "background_color": "#F3FAF8",
+  "start_url": "/adatna/",
+  "display": "standalone",
+  "orientation": "portrait-primary",
+  "id": "/adatna/"
 }
