--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,12 +1,12 @@
 {
+  "id": "/adatna/",
   "name": "Habit Hacker",
   "short_name": "Habit Hacker",
-  "description": "An app to help you quit bad habits.",
-  "start_url": "/adatna/",
-  "id": "/adatna/",
+  "description": "An app to help you track and break bad habits.",
+  "start_url": ".",
   "display": "standalone",
   "orientation": "portrait-primary",
-  "background_color": "#F0F4F8",
+  "background_color": "#18453B",
   "theme_color": "#18453B",
   "icons": [
     {
