--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,22 +1,22 @@
 {
-  "name": "Habit Hacker - هاكر العادات",
-  "short_name": "Habit Hacker",
-  "description": "تطبيق لمساعدتك على تتبع العادات السيئة والتخلص منها. An app to help you track and break bad habits.",
-  "id": "/adatna/",
+  "name": "التخلص من العادات والافكار وملخصات كتب وتنمية الشخصية",
+  "short_name": "هاكر العادات",
+  "description": "تطبيق شامل لمساعدتك على التخلص من العادات السيئة، مع ملخصات كتب قيمة لتنمية شخصيتك.",
   "start_url": ".",
   "display": "standalone",
   "orientation": "portrait-primary",
-  "background_color": "#F0FFF4",
+  "id": "/adatna/",
+  "background_color": "#18453B",
   "theme_color": "#18453B",
   "icons": [
     {
-      "src": "/adatna/icons/icon-192x192.png",
+      "src": "icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/adatna/icons/icon-512x512.png",
+      "src": "icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -24,18 +24,16 @@
   ],
   "screenshots": [
     {
-      "src": "https://picsum.photos/seed/1/1080/1920",
-      "sizes": "1080x1920",
-      "type": "image/jpeg",
-      "form_factor": "narrow",
-      "label": "Habit Tracking"
+      "src": "https://picsum.photos/seed/1/540/720",
+      "type": "image/png",
+      "sizes": "540x720",
+      "form_factor": "narrow"
     },
     {
-      "src": "https://picsum.photos/seed/2/1080/1920",
-      "sizes": "1080x1920",
-      "type": "image/jpeg",
-      "form_factor": "narrow",
-      "label": "Adhkar Reminders"
+      "src": "https://picsum.photos/seed/2/720/540",
+      "type": "image/png",
+      "sizes": "720x540",
+      "form_factor": "wide"
     }
   ]
 }
