--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,18 +1,54 @@
 {
-  "theme_color": "#18453B",
-  "background_color": "#18453B",
-  "display": "standalone",
-  "scope": "/adatna/",
-  "start_url": "/adatna/",
-  "id": "/adatna/",
   "name": "التخلص من العادات والافكار وملخصات كتب وتنمية الشخصية",
   "short_name": "هاكر العادات",
   "description": "تطبيق شامل لمساعدتك على التخلص من العادات السيئة، مع ملخصات كتب قيمة لتنمية شخصيتك.",
+  "id": "/adatna/",
+  "start_url": "/adatna/",
+  "display": "standalone",
   "orientation": "portrait-primary",
+  "background_color": "#18453B",
+  "theme_color": "#18453B",
+  "scope": "/adatna/",
   "icons": [
+    {
+      "src": "/adatna/icons/icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/adatna/icons/icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/adatna/icons/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/adatna/icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/adatna/icons/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
     {
       "src": "/adatna/icons/icon-192x192.png",
       "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/adatna/icons/icon-384x384.png",
+      "sizes": "384x384",
       "type": "image/png",
       "purpose": "any maskable"
     },
