--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,42 +1,26 @@
 {
-  "name": "التخلص من العادات والافكار وملخصات كتب وتنمية الشخصية",
+  "name": "التخلص من العادات والافكار وملخصات كتب وتنمية الشخصيه",
   "short_name": "هاكر العادات",
   "description": "تطبيق شامل لمساعدتك على التخلص من العادات السيئة، مع ملخصات كتب قيمة لتنمية شخصيتك.",
   "start_url": "/",
+  "id": "/",
   "display": "standalone",
   "orientation": "portrait-primary",
-  "background_color": "#F0F4F8",
+  "background_color": "#18453B",
   "theme_color": "#18453B",
   "scope": "/",
-  "id": "/",
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
-    }
-  ],
-  "screenshots": [
-    {
-      "src": "https://picsum.photos/seed/1/1080/1920",
-      "sizes": "1080x1920",
-      "type": "image/png",
-      "form_factor": "narrow",
-      "label": "Home Screen"
-    },
-    {
-      "src": "https://picsum.photos/seed/2/1080/1920",
-      "sizes": "1080x1920",
-      "type": "image/png",
-      "form_factor": "narrow",
-      "label": "Summaries Page"
     }
   ]
 }
