--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,26 +1,40 @@
 {
-  "name": "التخلص من العادات والافكار وملخصات كتب وتنمية الشخصيه",
+  "theme_color": "#18453B",
+  "background_color": "#ffffff",
+  "display": "standalone",
+  "scope": "/adatna/",
+  "start_url": "/adatna/",
+  "id": "/adatna/",
+  "name": "التخلص من العادات والافكار وملخصات كتب وتنمية الشخصية",
   "short_name": "هاكر العادات",
   "description": "تطبيق شامل لمساعدتك على التخلص من العادات السيئة، مع ملخصات كتب قيمة لتنمية شخصيتك.",
-  "start_url": "/",
-  "id": "/",
-  "display": "standalone",
   "orientation": "portrait-primary",
-  "background_color": "#18453B",
-  "theme_color": "#18453B",
-  "scope": "/",
   "icons": [
     {
-      "src": "icons/icon-192x192.png",
+      "src": "/adatna/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "icons/icon-512x512.png",
+      "src": "/adatna/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "/adatna/screenshots/screenshot1.png",
+      "sizes": "1080x2340",
+      "type": "image/png",
+      "form_factor": "narrow"
+    },
+    {
+      "src": "/adatna/screenshots/screenshot2.png",
+      "sizes": "1080x2340",
+      "type": "image/png",
+      "form_factor": "narrow"
     }
   ]
 }
