--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,23 +1,23 @@
 {
-  "name": "التخلص من العادات والافكار وملخصات كتب وتنمية الشخصية",
-  "short_name": "هاكر العادات",
-  "description": "تطبيق شامل لمساعدتك على التخلص من العادات السيئة، مع ملخصات كتب قيمة لتنمية شخصيتك.",
-  "start_url": "/",
-  "id": "/",
-  "scope": "/",
+  "name": "هاكر العادات",
+  "short_name": "عادات",
+  "start_url": ".",
   "display": "standalone",
   "orientation": "portrait-primary",
   "background_color": "#18453B",
   "theme_color": "#18453B",
+  "description": "تطبيق لمساعدتك على التخلص من العادات السيئة وبناء عادات إيجابية.",
+  "scope": "/",
+  "id": "/adatna/",
   "icons": [
     {
-      "src": "/icon-192x192.png",
+      "src": "icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon-512x512.png",
+      "src": "icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
