--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,26 +1,24 @@
 {
-  "name": "هاكر العادات",
-  "short_name": "عادات",
-  "start_url": ".",
-  "display": "standalone",
-  "orientation": "portrait-primary",
-  "background_color": "#18453B",
-  "theme_color": "#18453B",
-  "description": "تطبيق لمساعدتك على التخلص من العادات السيئة وبناء عادات إيجابية.",
-  "scope": "/",
-  "id": "/adatna/",
-  "icons": [
-    {
-      "src": "icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    }
-  ]
+    "name": "هاكر العادات",
+    "short_name": "عادات",
+    "description": "تطبيق لمساعدتك على التخلص من العادات السيئة",
+    "start_url": "/",
+    "id": "/",
+    "display": "standalone",
+    "orientation": "portrait",
+    "background_color": "#140509",
+    "theme_color": "#18453B",
+    "scope": "/",
+    "icons": [
+        {
+            "src": "/icons/icon-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "/icons/icon-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ]
 }
