--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,24 +1,35 @@
 {
-    "name": "هاكر العادات",
-    "short_name": "عادات",
-    "description": "تطبيق لمساعدتك على التخلص من العادات السيئة",
-    "start_url": "/",
-    "id": "/",
-    "display": "standalone",
-    "orientation": "portrait",
-    "background_color": "#140509",
-    "theme_color": "#18453B",
-    "scope": "/",
-    "icons": [
-        {
-            "src": "/icons/icon-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "/icons/icon-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ]
+  "name": "هاكر العادات",
+  "short_name": "عاداتنا",
+  "description": "تطبيق لمساعدتك على بناء عادات إيجابية والتخلص من العادات السلبية.",
+  "start_url": "/",
+  "id": "/",
+  "scope": "/",
+  "display": "standalone",
+  "background_color": "#18453B",
+  "theme_color": "#18453B",
+  "orientation": "portrait-primary",
+  "icons": [
+    {
+      "src": "/icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
+  ],
+  "shortcuts": [
+    {
+      "name": "بدء عادة جديدة",
+      "short_name": "عادة جديدة",
+      "description": "فتح صفحة إضافة عادة جديدة مباشرة",
+      "url": "/",
+      "icons": [{ "src": "/icons/icon-192x192.png", "sizes": "192x192" }]
+    }
+  ]
 }
