A web manifest is a JSON text file that provides information about a web

--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "habit-hacker",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://abdalhmudey-commits.github.io/adatna",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "next build && touch out/.nojekyll && gh-pages -d out -t true"
+    "predeploy": "npm run build",
+    "deploy": "touch out/.nojekyll && gh-pages -d out -t true"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
