--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,34 +1,31 @@
 {
-  "name": "هاكر العادات",
-  "short_name": "عاداتنا",
-  "description": "تطبيق لمساعدتك على بناء عادات إيجابية والتخلص من العادات السلبية.",
+  "theme_color": "#18453B",
+  "background_color": "#000000",
+  "display": "standalone",
+  "scope": "/",
   "start_url": "/",
   "id": "/",
-  "scope": "/",
-  "display": "standalone",
-  "background_color": "#18453B",
-  "theme_color": "#18453B",
-  "orientation": "portrait-primary",
+  "name": "هاكر العادات",
+  "short_name": "عادات",
+  "description": "تطبيق لمساعدتك على التخلص من العادات السيئة وبناء عادات إيجابية.",
   "icons": [
     {
       "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
       "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
   ],
   "shortcuts": [
     {
-      "name": "بدء عادة جديدة",
-      "short_name": "عادة جديدة",
+      "name": "إضافة عادة جديدة",
+      "short_name": "إضافة عادة",
       "description": "فتح صفحة إضافة عادة جديدة مباشرة",
-      "url": "/",
+      "url": "/?action=add-habit",
       "icons": [{ "src": "/icons/icon-192x192.png", "sizes": "192x192" }]
     }
   ]
