--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,32 +1,24 @@
 {
-  "theme_color": "#18453B",
-  "background_color": "#ffffff",
-  "display": "standalone",
-  "scope": "/",
-  "start_url": "/",
-  "name": "هاكر العادات",
-  "short_name": "عادات",
-  "description": "تطبيق لتتبع العادات السيئة والتخلص منها",
-  "icons": [
-    {
-      "src": "/icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-256x256.png",
-      "sizes": "256x256",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+    "name": "هاكر العادات",
+    "short_name": "عادات",
+    "description": "تطبيق لمساعدتك على التخلص من العادات السيئة وتتبعها",
+    "start_url": "/adatna/",
+    "display": "standalone",
+    "orientation": "portrait",
+    "background_color": "#18453B",
+    "theme_color": "#18453B",
+    "id": "/adatna/",
+    "scope": "/adatna/",
+    "icons": [
+        {
+            "src": "/adatna/icons/icon-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "/adatna/icons/icon-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ]
 }
