--- a/package.json
+++ b/package.json
@@ -2,14 +2,11 @@
   "name": "habit-hacker",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://abdalhmudey-commits.github.io/adatna",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "predeploy": "npm run build",
-    "deploy": "touch out/.nojekyll && gh-pages -d out -t true"
+    "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -55,7 +52,6 @@
     "@types/react-dom": "^18",
     "@types/recharts": "^1.8.29",
     "@types/uuid": "^9.0.8",
-    "gh-pages": "^6.1.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
