--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,24 +1,24 @@
 {
-    "name": "هاكر العادات",
-    "short_name": "عادات",
-    "description": "تطبيق لمساعدتك على التخلص من العادات السيئة وتتبعها",
-    "start_url": "/adatna/",
-    "display": "standalone",
-    "orientation": "portrait",
-    "background_color": "#18453B",
-    "theme_color": "#18453B",
-    "id": "/adatna/",
-    "scope": "/adatna/",
+    "name": "تطبيق عادة",
+    "short_name": "عادة",
+    "description": "تطبيق لمساعدتك على التخلص من العادات السيئة",
     "icons": [
         {
-            "src": "/adatna/icons/icon-192x192.png",
+            "src": "/icons/icon-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/adatna/icons/icon-512x512.png",
+            "src": "/icons/icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
-    ]
+    ],
+    "theme_color": "#18453B",
+    "background_color": "#F0FDF4",
+    "start_url": "/",
+    "display": "standalone",
+    "orientation": "portrait",
+    "scope": "/",
+    "id": "/"
 }
