--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,33 +1,32 @@
 {
-    "theme_color": "#18453B",
-    "background_color": "#ffffff",
-    "display": "standalone",
-    "scope": "/adatna/",
-    "start_url": "/adatna/",
-    "name": "هاكر العادات",
-    "short_name": "عادات",
-    "description": "تطبيق لمساعدتك على التخلص من العادات السيئة وبناء عادات إيجابية",
-    "id": "/adatna/",
-    "icons": [
-        {
-            "src": "/adatna/icons/icon-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "/adatna/icons/icon-256x256.png",
-            "sizes": "256x256",
-            "type": "image/png"
-        },
-        {
-            "src": "/adatna/icons/icon-384x384.png",
-            "sizes": "384x384",
-            "type": "image/png"
-        },
-        {
-            "src": "/adatna/icons/icon-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ]
+  "theme_color": "#18453B",
+  "background_color": "#ffffff",
+  "display": "standalone",
+  "scope": "/adatna/",
+  "start_url": "/adatna/",
+  "name": "هاكر العادات",
+  "short_name": "عادات",
+  "description": "تطبيق لمساعدتك على التخلص من العادات السيئة",
+  "icons": [
+    {
+      "src": "/adatna/icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/adatna/icons/icon-256x256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "/adatna/icons/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "/adatna/icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
