--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,22 +1,42 @@
 {
-  "theme_color": "#18453B",
-  "background_color": "#ffffff",
-  "display": "standalone",
-  "scope": "/adatna/",
-  "start_url": "/adatna/",
   "name": "هاكر العادات",
-  "short_name": "عادات",
+  "short_name": "هاكر العادات",
   "description": "تطبيق لمساعدتك على التخلص من العادات السيئة",
+  "start_url": ".",
+  "display": "standalone",
+  "background_color": "#18453B",
+  "theme_color": "#18453B",
   "icons": [
     {
-      "src": "/adatna/icons/icon-192x192.png",
-      "sizes": "192x192",
+      "src": "/adatna/icons/icon-72x72.png",
+      "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "/adatna/icons/icon-256x256.png",
-      "sizes": "256x256",
+      "src": "/adatna/icons/icon-96x96.png",
+      "sizes": "96x96",
       "type": "image/png"
+    },
+    {
+      "src: "/adatna/icons/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "/adatna/icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "/adatna/icons/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    },
+    {
+      "src": "/adatna/icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/adatna/icons/icon-384x384.png",
