--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,11 @@
 {
   "name": "هاكر العادات",
-  "short_name": "هاكر العادات",
-  "description": "تطبيق لمساعدتك على التخلص من العادات السيئة",
-  "start_url": ".",
+  "short_name": "Adatna",
+  "description": "تطبيق لمساعدتك على بناء عادات حسنة والتخلص من العادات السيئة",
+  "start_url": "/adatna/",
   "display": "standalone",
-  "background_color": "#18453B",
+  "orientation": "portrait",
+  "background_color": "#1405095",
   "theme_color": "#18453B",
   "icons": [
     {
@@ -18,7 +19,7 @@
       "type": "image/png"
     },
     {
-      "src: "/adatna/icons/icon-128x128.png",
+      "src": "/adatna/icons/icon-128x128.png",
       "sizes": "128x128",
       "type": "image/png"
     },
